--- a/index.html
+++ b/index.html
@@ -1,12 +1,512 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex_box</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <!-- Horizontal alignment -->
+    <h1>Horizontal alignment</h1>
+    <h2>justify-content center</h2>
+    <div class="container1">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+
+    </div>
+
+
+
+
+    <h2>justify-content flex end</h2>
+    <div class="container2">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+
+    </div>
+    <h2>justify-content space between</h2>
+    <div class="container3">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+
+    </div>
+
+
+
+
+    <h2>justify-content space evenly</h2>
+    <div class="container4">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+
+    </div>
+    <h2>justify-content space around</h2>
+    <div class="container5">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+
+    </div>
+
+    <!-- Vertical alignment -->
+
+    <h1>Vertical alignment</h1>
+
+    <h2>align-items flex end</h2>
+    <div class="container6">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+
+    </div>
+    <h2>align-items center</h2>
+    <div class="container7">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+
+    </div>
+    <h2>align-items and justify content Center</h2>
+    <div class="container8">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+
+    </div>
+    <h2>align-items stretch</h2>
+    <div class="container14">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+
+    </div>
+
+    <!-- Flex Direction -->
+    <h2>Flex Direction Row reverse</h2>
+    <div class="container9">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+
+    </div>
+    <h2>Flex Direction colum</h2>
+    <div class="container10">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+
+    </div>
+    <h2>Flex Direction Colum reverse</h2>
+    <div class="container11">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+
+    </div>
+
+
+    <!-- Flex Wrap -->
+    <!-- by default: no wrap -->
+    <h2>Flex Wrap: wrap</h2>
+    <div class="container12">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+
+    </div>
+    <h2>Flex Wrap: wrap-reverse</h2>
+    <div class="container13">
+        <div class="box">
+            <h2>Box-S</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-4</h2>
+        </div>
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div class="box">
+            <h2>Box-2</h2>
+        </div>
+        <div class="box">
+            <h2>Box-3</h2>
+        </div>
+        <div class="box">
+            <h2>Box-E</h2>
+        </div>
+
+    </div>
+    <h2>Flex Grow</h2>
+    <div class="container15">
+        <div class="box">
+            <h2>Box-1</h2>
+        </div>
+        <div id="container15" class="box">
+            <h2>Box-2</h2>
+
+
+    </div>
+
+
 </body>
+
 </html>
